Update: Fix characters overflow in display

--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,15 @@
     src: url(fonts/digital-italic.ttf);
 }
 
+html {
+    height: 100%;
+}
+
 body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 500px;
+    min-height: 100%;
     background-color: blue;
 }
 
@@ -30,6 +34,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 100%;
 }
 
 
@@ -37,13 +42,14 @@ body {
     background-color: black;
     color: rgb(83, 234, 83);
     border-radius: 15px;
-    padding: 20px;
+    padding: 10px;
 }
 
 #display p {
     font-family: "digital-italic", monospace;
     font-size: 35px;
-    height: 25px;
+    overflow-wrap: break-word;
+    display: inline;
 }
 
 #button-panel {
